--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.0-rc.3"
+    "styled-components": "^6.0.0-rc.3",
+    "swiper": "^9.4.1"
   }
 }
